<resources>
    <string name="app_name">Navigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_transactions">View transactions</string>
    <string name="send_money">Send money</string>
    <string name="view_balance">View balance</string>
    <string name="balance">1</string>
    <string name="go_in_button">Go in</string>
    <string name="welcome_message">Holiii</string>
    <string name="about_definition">Somos de la ciudad de feria de flores, donde tomamos guaro por montones. Una tierra pujante ilusiones, en donde solo nacen campeones.</string>
    <string name="food">Food</string>
    <string name="data">Data</string>
    <string name="rent">Rent</string>
    <string name="candles">Candles</string>
    <string name="utility">Utility</string>
    <string name="transaction_name">Name</string>
    <string name="recipient">Recipient</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="share">Share</string>
</resources>
