<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SpecifyAmountFragment">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="28sp"
            android:layout_marginStart="-80dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="192dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="$0.00"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_amount" />

            <Button
                android:id="@+id/cancel_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="229dp"
                tools:layout_editor_absoluteY="385dp" />

        </LinearLayout>


    </LinearLayout>


</layout>